--- a/src/app/views/pages/custom-page1/custom-page1.component.html
+++ b/src/app/views/pages/custom-page1/custom-page1.component.html
@@ -120,43 +120,43 @@
                             <div>
                                 <mat-form-field class="mat-form-field-fluid">
                                     <mat-label>{{'Calle' | translate }}</mat-label>
-                                    <input [(ngModel)]="usermovenco.street" formControlName="street" matInput />
+                                    <input [(ngModel)]="usermovenco.userStreet" formControlName="street" matInput />
                                 </mat-form-field>
                             </div>
                             <div>
                                 <mat-form-field class="mat-form-field-fluid">
                                     <mat-label>{{"Nº Exterior" | translate }}</mat-label>
-                                    <input [(ngModel)]="usermovenco.exteriorNumber" formControlName="exteriorNumber" matInput/>
+                                    <input [(ngModel)]="usermovenco.userExteriorNumber" formControlName="exteriorNumber" matInput/>
                                 </mat-form-field>
                             </div>
                             <div>
                                 <mat-form-field class="mat-form-field-fluid">
                                     <mat-label>{{"Nº Interior" | translate }}</mat-label>
-                                    <input [(ngModel)]="usermovenco.interiorNumber" formControlName="interiorNumber" matInput/>
+                                    <input [(ngModel)]="usermovenco.userInteriorNumber" formControlName="interiorNumber" matInput/>
                                 </mat-form-field>
                             </div>
                             <div>
                                 <mat-form-field class="mat-form-field-fluid">
                                     <mat-label>{{"Código Postal" | translate }}</mat-label>
-                                    <input [(ngModel)]="usermovenco.zipCode" formControlName="zipCode" matInput/>
+                                    <input [(ngModel)]="usermovenco.userZipCode" formControlName="zipCode" matInput/>
                                 </mat-form-field>
                             </div>
                             <div>
                                 <mat-form-field class="mat-form-field-fluid">
                                     <mat-label>{{"Colonia" | translate }}</mat-label>
-                                    <input [(ngModel)]="usermovenco.neighborhood" formControlName="neighborhood" matInput />
+                                    <input [(ngModel)]="usermovenco.userNeighborhood" formControlName="neighborhood" matInput />
                                 </mat-form-field>
                             </div>
                             <div>
                                 <mat-form-field class="mat-form-field-fluid">
                                     <mat-label>{{"Estado" | translate }}</mat-label>
-                                    <input [(ngModel)]="usermovenco.state" formControlName="state" matInput/>
+                                    <input [(ngModel)]="usermovenco.userState" formControlName="state" matInput/>
                                 </mat-form-field>
                             </div>
                             <div>
                                 <mat-form-field class="mat-form-field-fluid">
                                     <mat-label>{{"Ciudad/Municipio" | translate }}</mat-label>
-                                    <input [(ngModel)]="usermovenco.city" formControlName="city" matInput/>
+                                    <input [(ngModel)]="usermovenco.userCity" formControlName="city" matInput/>
                                 </mat-form-field>
                             </div>
                         </div>
