--- a/src/app/views/pages/auth/login/login.component.html
+++ b/src/app/views/pages/auth/login/login.component.html
@@ -46,7 +46,7 @@
             <!--begin::Action-->
             <div class="form-group d-flex flex-wrap justify-content-between align-items-center">
                 <span class="text-dark-50 text-hover-primary my-3 mr-2" id="kt_login_forgot"><input type="checkbox"
-                     [checked]="rememberme"/>&nbsp;{{"Recordarme" | translate }}</span>
+                     [(ngModel)]="rememberme" [ngModelOptions]="{standalone: true}" [checked]="rememberme"/>&nbsp;{{"Recordarme" | translate }}</span>
 
                 <span style="cursor:pointer" class="text-dark-50 text-hover-primary my-3 mr-2" id="kt_login_forgot">{{ "	¿Olvidaste tu contraseña?" | translate }}</span>
             </div>
