--- a/src/app/views/pages/custom-page3/custom-page3.component.html
+++ b/src/app/views/pages/custom-page3/custom-page3.component.html
@@ -10,19 +10,19 @@
                         <div class="d-flex flex-column">
                             <mat-radio-group [ngModel]="'start'">
                                 <div class="d-flex flex-wrap justify-content-between">
-                                    <mat-checkbox value="Basico">
+                                    <mat-checkbox value="Basico" [(ngModel)]="basicGama">
                                         <span style="white-space: break-spaces;">
                                             {{"Basico" | translate }}
                                         </span>
                                     </mat-checkbox>
 
-                                    <mat-checkbox value="Medio">
+                                    <mat-checkbox value="Medio" [(ngModel)]="mediumGama">
                                         <span style="white-space: break-spaces;">
                                             {{"Medio" | translate }}
                                         </span>
                                     </mat-checkbox>
 
-                                    <mat-checkbox value="Premium">
+                                    <mat-checkbox value="Premium" [(ngModel)]="premiumGama">
                                         <span style="white-space: break-spaces;">
                                             {{"Premium" | translate }}
                                         </span>
@@ -48,12 +48,12 @@
                 <div class="card">
                     <div class="card-body">
                         <div class="d-flex flex-wrap flex-column">
-                            <mat-checkbox class="mb-4" value="1" (change)="addPermition($event)">
+                            <mat-checkbox class="mb-4" [(ngModel)]=shareBal>
                                 <span style="white-space: break-spaces;">
                                     {{"Compartir Saldo Movenco con User" | translate }}
                                 </span>
                             </mat-checkbox>
-                            <mat-checkbox [disabled]=true [checked]=true value="2" (change)="addPermition($event)">
+                            <mat-checkbox [(ngModel)]="addUs">
                                 <span style="white-space: break-spaces;">
                                     {{"Agregar User" | translate }}
                                 </span>
@@ -77,7 +77,7 @@
                 <div class="card">
                     <div class="card-body">
                         <div *ngFor="let base of allBases" class="d-flex flex-wrap flex-column">
-                            <mat-checkbox [disabled]="base.baseId==10" [checked]="base.baseId==10" class="mb-4" value="{{base.baseId}}" (change)="addPermition(base)">
+                            <mat-checkbox [disabled]="base.baseId==10" [checked]="base.baseId==10" class="mb-4" value="{{base.baseId}}" (change)="addbas(base)">
                                 <span style="white-space: break-spaces;">
                                    {{base.name}}
                                 </span>
@@ -94,7 +94,7 @@
 
         </div>
         <div class="ml-auto align-self-end d-flex justify-self-end custom-mt-2rem justify-content-end">
-            <button class="btn btn-primary custom-mr-2rem">{{"Guardar" | translate }}</button>&nbsp;&nbsp;
+            <button (click)="savePermis()" class="btn btn-primary custom-mr-2rem">{{"Guardar" | translate }}</button>&nbsp;&nbsp;
             <button class="btn btn-outline-primary">{{"Cancelar" | translate }}</button>
         </div>
     </div>
