--- a/src/app/views/pages/user-management/users/user-edit/user-edit.component.html
+++ b/src/app/views/pages/user-management/users/user-edit/user-edit.component.html
@@ -107,12 +107,24 @@
                     <div class="card">
                         <div class="card-body">
                             <div class="d-flex flex-column">
+                                <!-- <div>
+                                    <div class="custom-text-group" *ngIf="baseSel$ | async as _basese">
+                                        <span>{{'Base' | translate }}</span>
+                                        <p>{{_basese.name}}</p>
+                                    </div>
+                                </div> -->
                                 <div>
+                                    <div class="custom-text-group">
+                                        <span>{{'Base' | translate }}</span>
+                                        <p>{{baseSel.name}}</p>
+                                    </div>
+                                </div>
+                                <!-- <div>
                                     <mat-form-field class="mat-form-field-fluid">
                                         <mat-label>{{'Base' | translate }}</mat-label>
                                         <input matInput value="Puerto interior" formControlName="stationId" matInput/>
                                     </mat-form-field>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -340,7 +352,7 @@
 
         <div class="d-flex custom-mt-2rem justify-content-end">
 
-            <button routerLink="/page3" *ngIf="addpermitions" class="btn btn-primary custom-mr-2rem">{{"Permisos" | translate }}</button>&nbsp;&nbsp;
+            <button (click)="gopermis()" *ngIf="addpermitions" class="btn btn-primary custom-mr-2rem">{{"Permisos" | translate }}</button>&nbsp;&nbsp;
             <button *ngIf="!addpermitions" (click)="onSumbit(false)" class="btn btn-primary custom-mr-2rem">{{"Guardar" | translate }}</button>&nbsp;&nbsp;
             <button class="btn btn-outline-primary">{{"Cancelar" | translate}}</button>
         </div>
