--- a/src/app/views/pages/user-management/users/user-edit/user-edit.component.html
+++ b/src/app/views/pages/user-management/users/user-edit/user-edit.component.html
@@ -252,7 +252,35 @@
                                 <div>
                                     <mat-form-field class="mat-form-field-fluid">
                                         <mat-label>{{"Tipo de Sangre" | translate }}</mat-label>
-                                        <input formControlName="bloodtype" matInput />
+                                        <mat-select formControlName="bloodtype" matInput>
+                                            <mat-option value="O–">
+                                                O –
+                                            </mat-option>
+                                            <mat-option value="O+">
+                                                O +
+                                            </mat-option>
+                                            <mat-option value="A-">
+                                                A –
+                                            </mat-option>
+                                            <mat-option value="A+">
+                                                A +
+                                            </mat-option>
+                                            <mat-option value="B–">
+                                                B –
+                                            </mat-option>
+                                            <mat-option value="B+">
+                                                B +
+                                            </mat-option>
+                                            <mat-option value="AB-">
+                                                AB –
+                                            </mat-option>
+                                            <mat-option value="AB+">
+                                                AB +
+                                            </mat-option>
+                                            <mat-option value="Desconocido">
+                                                Desconocido
+                                            </mat-option>
+                                        </mat-select>
                                     </mat-form-field>
                                 </div>
                                 <div>
