--- a/src/app/views/pages/user-management/users/users-list/users-list.component.html
+++ b/src/app/views/pages/user-management/users/users-list/users-list.component.html
@@ -11,7 +11,7 @@
                 <div class="row align-items-center">
                     <div class="col-md-2 kt-margin-bottom-10-mobile">
                         <mat-form-field class="mat-form-field-fluid">
-                            <input matInput placeholder="Search customer" #searchInput placeholder="Buscar" />
+                            <input matInput placeholder="Buscar Usuario" #searchInput placeholder="Buscar" />
                             <mat-hint align="start">
                                 <strong>Buscar</strong> en todos los campos
                             </mat-hint>
@@ -21,11 +21,11 @@
                         <mat-form-field>
                             <mat-select [(value)]="filterStatus" (selectionChange)="loadUsersList()">
                                 <mat-option value="">Todos</mat-option>
-                                <mat-option value="Baja">Baja</mat-option>
                                 <mat-option value="Activo">Activo</mat-option>
+                                <mat-option value="Baja">Baja</mat-option>
                             </mat-select>
                             <mat-hint align="start">
-                                <strong>Filtrar </strong>por estatus
+                                <strong>Estatus</strong>
                             </mat-hint>
                         </mat-form-field>
                     </div>
@@ -38,7 +38,7 @@
                                 <mat-option value="Rider">Rider</mat-option>
                             </mat-select>
                             <mat-hint align="start">
-                                <strong>Filtrar</strong> por tipo
+                                <strong>Tipo Usuario</strong>
                             </mat-hint>
                         </mat-form-field>
                     </div>
@@ -81,12 +81,12 @@
         <!-- MATERIAL TABLE | Binded to datasources -->
         <!-- See off.documentations 'https://material.angular.io/components/table/overview' -->
         <div class="mat-table-wrapper">
-            <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource" matSort #sort1="matSort" matSortActive="userId" matSortDirection="asc" matSortDisableClear>
+            <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource" matSort #sort1="matSort" matSortActive="userName" matSortDirection="asc">
                 <!-- Checkbox Column -->
 
                 <!-- Table with selection -->
                 <!-- https://run.stackblitz.com/api/angular/v1?file=app%2Ftable-selection-example.ts -->
-                <ng-container matColumnDef="select">
+                <!-- <ng-container matColumnDef="select">
                     <mat-header-cell *matHeaderCellDef class="mat-column-checkbox">
                         <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()" [indeterminate]="selection.hasValue() && !isAllSelected()" [color]="'primary'">
                         </mat-checkbox>
@@ -95,44 +95,56 @@
                         <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null" [checked]="selection.isSelected(row)" [color]="'primary'">
                         </mat-checkbox>
                     </mat-cell>
-                </ng-container>
+                </ng-container> -->
 
-                <ng-container matColumnDef="userId">
-                    <!-- ATTRIBUTE mat-sort-header  for sorting | https://material.angular.io/components/sort/overview -->
+                <!-- <ng-container matColumnDef="userId">
+                   
                     <mat-header-cell *matHeaderCellDef mat-sort-header>ID</mat-header-cell>
                     <mat-cell *matCellDef="let user">{{user.userId}}</mat-cell>
-                </ng-container>
-                <ng-container matColumnDef="Nombre(s)">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>Nombre(s)</mat-header-cell>
+                </ng-container> -->
+                <ng-container matColumnDef="userName">
+                    <mat-header-cell *matHeaderCellDef mat-sort-header>
+                        <div>Nombre(s)</div>
+                    </mat-header-cell>
                     <mat-cell *matCellDef="let user">{{user.userName}}</mat-cell>
                 </ng-container>
 
-                <ng-container matColumnDef="Apellido Paterno">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>Apellido Paterno</mat-header-cell>
+                <ng-container matColumnDef="userSurname">
+                    <mat-header-cell *matHeaderCellDef mat-sort-header>
+                        <div>Apellido</div>
+                        <div>&nbsp;Paterno</div>
+                    </mat-header-cell>
                     <mat-cell *matCellDef="let user">{{user.userSurname}}</mat-cell>
                 </ng-container>
 
-                <ng-container matColumnDef="Apellido Materno">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>Apellido Materno</mat-header-cell>
+                <ng-container matColumnDef="userLastname">
+                    <mat-header-cell *matHeaderCellDef mat-sort-header>
+                        <div>Apellido</div>
+                        <div>&nbsp;Materno</div>
+                    </mat-header-cell>
                     <mat-cell *matCellDef="let user">{{user.userLastname}}</mat-cell>
                 </ng-container>
 
-                <ng-container matColumnDef="Puesto">
+                <ng-container matColumnDef="position">
                     <mat-header-cell *matHeaderCellDef mat-sort-header>Puesto</mat-header-cell>
                     <mat-cell *matCellDef="let user">{{user.position}}</mat-cell>
                 </ng-container>
 
-                <ng-container matColumnDef="Area">
+                <ng-container matColumnDef="area">
                     <mat-header-cell *matHeaderCellDef mat-sort-header>Área</mat-header-cell>
                     <mat-cell *matCellDef="let user">{{user.area}}</mat-cell>
                 </ng-container>
 
-                <ng-container matColumnDef="Tipo de Usuario">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>Tipo de Usuario</mat-header-cell>
+                <ng-container matColumnDef="userTypeId">
+                    <mat-header-cell *matHeaderCellDef mat-sort-header>
+                        <div>Tipo</div>
+                        <div>&nbsp;de</div>
+                        <div>&nbsp;Usuario</div>
+                    </mat-header-cell>
                     <mat-cell *matCellDef="let user">{{user.userTypeId}}</mat-cell>
                 </ng-container>
 
-                <ng-container matColumnDef="Estatus">
+                <ng-container matColumnDef="statusId">
                     <mat-header-cell *matHeaderCellDef mat-sort-header>Estatus</mat-header-cell>
                     <mat-cell *matCellDef="let user">{{ user.statusId }}</mat-cell>
                 </ng-container>
@@ -141,6 +153,9 @@
                 <ng-container matColumnDef="actions">
                     <mat-header-cell *matHeaderCellDef>Acciones</mat-header-cell>
                     <mat-cell *matCellDef="let user">
+                        <button mat-icon-button color="dark" matTooltip="view">
+                            <mat-icon>remove_red_eye</mat-icon>
+                        </button>
                         <button (click)="editUser(user.id)" mat-icon-button color="primary" matTooltip="Edit user">
 							<mat-icon>create</mat-icon>
 						</button>&nbsp;
