--- a/src/app/views/partials/layout/search-result/search-result.component.html
+++ b/src/app/views/partials/layout/search-result/search-result.component.html
@@ -84,7 +84,7 @@
                     </div>
                 </div>
                 <div class="d-flex flex-column ml-3 mt-2 mb-2">
-                    <a href="#" class="font-weight-bold text-dark text-hover-primary">
+                    <a [href]="el.ref" class="font-weight-bold text-dark text-hover-primary">
 						{{el.title}}
 					</a>
                     <span class="font-size-sm font-weight-bold text-muted">
