alta usuario y permisos

--- a/src/app/views/partials/layout/topbar/user-profile4/user-profile4.component.html
+++ b/src/app/views/partials/layout/topbar/user-profile4/user-profile4.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="customer$ | async as _customer">
-    <div class="topbar-item" data-placement="bottom" ngbTooltip="Quick user info">
+    <div class="topbar-item" data-placement="bottom">
         <div class="btn btn-icon w-auto btn-clean d-flex align-items-center btn-lg px-5" id="kt_quick_user_toggle">
             <!-- <ng-container *ngIf="greeting">
                 <span class="text-muted font-weight-bold font-size-base d-none d-md-inline mr-1">Hola,</span>
