--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,3 +2,8 @@
 	height: 100%;
 	margin: 0;
 }
+
+/deep/ .mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-bar {
+    background-color: #49c5b6;
+}
+
