estilos slide rojo

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -116,8 +116,12 @@ Custom Override start here
 }
 
 .mat-slide-toggle-bar {
-    background-color: #00cd98;
+    background-color: #FF4081;
     padding: 0.625rem;
+}
+
+.mat-slide-toggle-thumb {
+    background-color: #FF4081;
 }
 
 .mat-form-field-type-mat-input,
