--- a/src/app/views/pages/user-management/users/users-list/users-list.component.html
+++ b/src/app/views/pages/user-management/users/users-list/users-list.component.html
@@ -125,14 +125,14 @@
                     <mat-cell *matCellDef="let user">{{user.userLastname}}</mat-cell>
                 </ng-container>
 
-                <ng-container matColumnDef="position">
+                <ng-container matColumnDef="userPosition">
                     <mat-header-cell *matHeaderCellDef mat-sort-header>Puesto</mat-header-cell>
-                    <mat-cell *matCellDef="let user">{{user.position}}</mat-cell>
+                    <mat-cell *matCellDef="let user">{{user.userPosition}}</mat-cell>
                 </ng-container>
 
-                <ng-container matColumnDef="area">
+                <ng-container matColumnDef="userArea">
                     <mat-header-cell *matHeaderCellDef mat-sort-header>Área</mat-header-cell>
-                    <mat-cell *matCellDef="let user">{{user.area}}</mat-cell>
+                    <mat-cell *matCellDef="let user">{{user.userArea}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="userTypeId">
