--- a/src/app/views/pages/custom-page3/custom-page3.component.html
+++ b/src/app/views/pages/custom-page3/custom-page3.component.html
@@ -77,7 +77,7 @@
                 <div class="card">
                     <div class="card-body">
                         <div *ngFor="let base of allBases" class="d-flex flex-wrap flex-column">
-                            <mat-checkbox [disabled]="base.baseId==10" [checked]="base.baseId==10" class="mb-4" value="{{base.baseId}}" (change)="addbas(base)">
+                            <mat-checkbox class="mb-4" value="{{base.baseId}}" (change)="addbas(base)">
                                 <span style="white-space: break-spaces;">
                                    {{base.name}}
                                 </span>
