--- a/src/app/views/pages/custom-page3/custom-page3.component.html
+++ b/src/app/views/pages/custom-page3/custom-page3.component.html
@@ -3,7 +3,7 @@
         <div class="col-lg-4 col-xl-4 col-md-4 col-sm-12">
             <div class="d-flex flex-column custom-mt-sm-2rem">
                 <h3 class="custom-mb-2rem mx-auto d-block custom-text-title">
-                    {{"Gama de vehiculo" | translate }}
+                    {{"Gama de vehículo" | translate }}
                 </h3>
                 <div class="card">
                     <div class="card-body">
@@ -12,7 +12,7 @@
                                 <div class="d-flex flex-wrap justify-content-between">
                                     <mat-checkbox value="Basico" [(ngModel)]="basicGama">
                                         <span style="white-space: break-spaces;">
-                                            {{"Basico" | translate }}
+                                            {{"Básico" | translate }}
                                         </span>
                                     </mat-checkbox>
 
