--- a/src/app/views/pages/custom-page1/custom-page1.component.html
+++ b/src/app/views/pages/custom-page1/custom-page1.component.html
@@ -221,7 +221,7 @@
                             <div>
                                 <mat-form-field class="mat-form-field-fluid">
                                     <mat-label>{{"Tipo de Sangre" | translate }}</mat-label>
-                                    <input [(ngModel)]="usermovenco.bloodtype" formControlName="bloodtype" matInput />
+                                    <input [(ngModel)]="usermovenco.bloodType" formControlName="bloodtype" matInput />
                                 </mat-form-field>
                             </div>
                             <div>
