--- a/src/app/views/pages/user-management/users/users-list/users-list.component.html
+++ b/src/app/views/pages/user-management/users/users-list/users-list.component.html
@@ -9,10 +9,11 @@
             <!-- start::FILTERS -->
             <div class="form-filtration">
                 <div class="row align-items-center">
-                    <div class="col-md-2 kt-margin-bottom-10-mobile">
+                    <div class="col-md-3 kt-margin-bottom-10-mobile">
                         <mat-form-field class="mat-form-field-fluid">
-                            <input matInput placeholder="Buscar Usuario" #searchInput placeholder="Buscar" />
+                            <input matInput placeholder="Introducir términos de búsqueda" #searchInput placeholder="Introducir términos de búsqueda" />
                             <mat-hint align="start">
+
                                 <strong>Buscar</strong> en todos los campos
                             </mat-hint>
                         </mat-form-field>
